--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
     <% if @score == [] %>
       <p class="userShow-block__noRound">表示できるラウンド結果はありません。</p>
     <% else %>
-      <table class="userShow-block__round__table">
+      <table class="userShow-block__round__table table table-striped">
         <tr class="userShow-block__round__tr">
           <th>プレイ日</th>
           <th>コース</th>
