--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,10 +1,15 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.home-block {
+    width: 700px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
 .topMenu-list {
     display: flex;
     justify-content: space-between;
-    width: 800px;
     margin: 50px auto;
 }
 
@@ -19,14 +24,23 @@
 .newsList {
     display: flex;
     justify-content: space-around;
+    .newsList__image {
+        margin: 30px;
+        width: 85px;
+    }
 }
 
 .unfinishedList,
 .follwingPlayList {
     background-color: white;
-    width: 45%;
+    width: 500px;
+    height: auto;
+    min-height: 200px;
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
+    border: 1px solid;
+    padding: 10px;
 }
 
 .newsList__image {
