--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -1,7 +1,7 @@
-// Place all the styles related to the Golfcourses controller here.
+// Place all the styles related to the Mypage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.golfcourse-block {
+.message-block {
     width: 700px;
     margin: 0 auto;
     padding: 20px;
