--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .mypage-block {
     background: rgba(255, 255, 255, 0.4);
-    width: 90%;
+    width: 700px;
     margin: 0 auto;
     padding: 20px;
     .mypage-block__avatar {
