--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,9 @@
+<div class="message-block">
 <h1>掲示板</h1>
 <p>コースごとの口コミや情報が見られます。</p>
-<div>
+<ul>
   <% @every_course_name.each do|name|%>
-      <span><%= link_to name.golfcoursename, messages_index_course_path(golfcourse_id: name.id) %> </span><br>
+      <li><%= link_to name.golfcoursename, messages_index_course_path(golfcourse_id: name.id) %> </li>
   <% end %>
+</ul>
 </div>
