--- a/app/views/scores/_leader_board.html.erb
+++ b/app/views/scores/_leader_board.html.erb
@@ -1,57 +1,52 @@
+<div class="leader-board">
+  <h2>リーダーボード</h1>
 
-<table class="table">
-  <tr>
-    <th scope="col">rank</th>
-    <th scope="col">name</th>
-    <th scope="col">score</th>
-    <th scope="col">THRU</th>
-    <th scope="col">start_hole</th>
-  </tr>
-  <% s = 0 %>
-  <% j = 1 %>
-  <% @current_course_scores.each.with_index(1) do|score,i| %>
-  <tr>
-    <% if i == 1 %>
-      <% s = score.total_score %>
-    <% end %>
-
-    <% if score.total_score != s %>
-      <% j = i %>
-      <td><%= j %></td>
-      <td><%= score.user.name %></td>
-      <td><%= score.total_score %></td>
-      <td>
-        <% if score.status == 1 %>
-          F
-        <% else %>
-          <%= score.thru.to_i %>
-        <% end %>
-      </td>
-      <% if score.start_hole == 10 %>
-        <td>*</td>
-       <% else %>
-        <td></td>
+  <table class="table table-striped">
+    <tr>
+      <th scope="col">順位</th>
+      <th scope="col">プレイヤー</th>
+      <th scope="col">スコア</th>
+      <th scope="col">THRU</th>
+      <%# <th scope="col">スタートホール</th> %>
+    </tr>
+    <% s = 0 %>
+    <% j = 1 %>
+    <% @current_course_scores.each.with_index(1) do|score,i| %>
+    <tr>
+      <% if i == 1 %>
+        <% s = score.total_score %>
       <% end %>
-      <% s = score.total_score %>
-    <% else %>
-      <% s = score.total_score %>
-      <td><%= j %></td>
-      <td><%= score.user.name %></td>
-      <td><%= score.total_score %></td>
-      <td>
-        <% if score.status == 1 %>
-          F
-        <% else %>
-          <%= score.thru.to_i %>
-        <% end %>
-      </td>
-      <% if score.start_hole == 10 %>
-        <td>*</td>
+
+      <% if score.total_score != s %>
+        <% j = i %>
+        <td><%= j %></td>
+        <td><%= score.user.name %></td>
+        <td><%= score.total_score %></td>
+        <td>
+          <% if score.status == 1 %>
+            F
+          <% else %>
+            <%= score.thru.to_i %>
+          <% end %>
+        </td>
+
+        <% s = score.total_score %>
       <% else %>
-        <td></td>
+        <% s = score.total_score %>
+        <td><%= j %></td>
+        <td><%= score.user.name %></td>
+        <td><%= score.total_score %></td>
+        <td>
+          <% if score.status == 1 %>
+            F
+          <% else %>
+            <%= score.thru.to_i %>
+          <% end %>
+        </td>
+
       <% end %>
+    </tr>
     <% end %>
-  </tr>
-  <% end %>
-</table>
-<p>*は10Hスタート</p>
+  </table>
+  <p>*は10Hスタート</p>
+</div>
