--- a/app/assets/stylesheets/archive.scss
+++ b/app/assets/stylesheets/archive.scss
@@ -73,3 +73,25 @@
         justify-content: center;
     }
 }
+
+.archiveShow-block {
+    width: 700px;
+    margin: 0 auto;
+    padding: 20px;
+    .card-borad_block {
+        display: flex;
+        justify-content: center;
+    }
+    .score-card {
+        width: 320px;
+        margin: 0 auto;
+    }
+    .score-card__table {
+        width: 320px;
+        display: flex;
+    }
+    .leader-board {
+        width: 320px;
+        margin: 0 auto;
+    }
+}
