--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,16 +1,22 @@
 document.getElementById('messages')
 .insertAdjacentHTML('afterbegin',
 '<p id="message-<%= @message.id %>">\
-    <% if @message.image == nil  %>\
-    <% else %>\
-      <img class="thmb" src="<%= "#{@message.image}" %>">\
-    <% end %>\
-    <span><%= @message.content %></span>\
-    <span><%= @message.user.name %></span>\
-    <span><%= @message.created_at %></span>\
-    <a id="unlike-<%= @message.id %>" href ="/messages/<%= params[:score_id] %>?message_id=<%= @message.id %>">0</a>\
+	<% if @message.user.avatar? %>\
+		<%= image_tag @message.user.avatar.url, class: "score-block__img"%>\
+	<% else %>\
+		<img src="/assets/ball.svg" class="score-block__img">\
+	<% end %>\
+	<span><%= link_to @message.user.name, users_show_path(id: @message.user.id) %></span>\
+	<% if @message.image != nil %>\
+    <img class="thmb" src="<%= "#{@message.image}" %>">\
+  <% end %>\
+	<span class="score-block__date-content"><%= @message.content %></span>\
+	<span class="score-block__date-like">\
+		<span><%= @message.created_at %></span>\
+		<a id="unlike-<%= @message.id %>" href ="/messages/<%= params[:score_id] %>?message_id=<%= @message.id %>">0</a>\
     <a id="change-like-<%= @message.id %>" data-remote="true" rel="nofollow" data-method="post" href="/likes?message_id=<%= @message.id %>&score_id=<%= params[:score_id] %>&user_id=<%= current_user.id %>">\♡\</a>\
-  </p>');
+	</span>\
+</p>');
 
 
 
