--- a/app/views/scores/_leader_board.html.erb
+++ b/app/views/scores/_leader_board.html.erb
@@ -1,14 +1,17 @@
 <div class="leader-board">
   <h2>リーダーボード</h1>
-  <table class="table table-striped">
+  <table class="table table-striped table-hover">
+    <thead class="leader-board__thead">
     <tr>
-      <th>順位</th>
-      <th>プレイヤー</th>
-      <th>スコア</th>
-      <th>THRU</th>
+      <th class="leader-board__rank">順位</th>
+      <th class="leader-board__player">プレイヤー</th>
+      <th class="leader-board__score">スコア</th>
+      <th class="leader-board__thru">THRU</th>
     </tr>
+    </thead>
     <% s = 0 %>
     <% j = 1 %>
+    <tbody class="leader-board__tbody">
     <% @current_course_scores.each.with_index(1) do|score,i| %>
       <tr>
         <% if i == 1 %>
@@ -16,10 +19,10 @@
         <% end %>
         <% if score.total_score != s %>
           <% j = i %>
-          <td><%= j %></td>
-          <td><%= link_to score.user.name, user_path(id: score.user.id) %></td>
-          <td><%= score.total_score %></td>
-          <td>
+          <td class="leader-board__rank"><%= j %></td>
+          <td class="leader-board__player"><%= link_to score.user.name, user_path(id: score.user.id) %></td>
+          <td class="leader-board__score"><%= score.total_score %></td>
+          <td class="leader-board__thru">
           <% if score.status == 1 %>
             <% if score.start_hole == 1 %>
               F
@@ -37,10 +40,10 @@
         <% s = score.total_score %>
         <% else %>
           <% s = score.total_score %>
-          <td><%= j %></td>
-          <td><%= link_to score.user.name, user_path(id: score.user.id) %></td>
-          <td><%= score.total_score %></td>
-          <td>
+          <td class="leader-board__rank"><%= j %></td>
+          <td class="leader-board__player"><%= link_to score.user.name, user_path(id: score.user.id) %></td>
+          <td class="leader-board__score"><%= score.total_score %></td>
+          <td class="leader-board__thru">
             <% if score.status == 1 %>
               <% if score.start_hole == 1 %>
                 F
@@ -58,6 +61,7 @@
         <% end %>
       </tr>
     <% end %>
+    </tbody>
   </table>
   <p>*は10Hスタート</p>
 </div>
