--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,6 +1,6 @@
 <div class="score-block">
 <p>ゴルフ場名:<%= @score.golfcourse.golfcoursename %></p>
-<p>プレイ日:<%= @score.played_date %></p>
+<p>プレイ日:<%= @score.played_date.strftime('%y年%-m月%d日(%a)') %></p>
 <p>スタートホール:<%= @score.start_hole %>H</p>
 
 <p>Total score:
@@ -11,11 +11,11 @@
   <%= render 'leader_board' %>
 </div>
 
-<h1><%= @score.golfcourse.golfcoursename %>のメッセージボード</h1>
+<h1><%= @score.golfcourse.golfcourseabbr %>のメッセージボード</h1>
 
 <%= render 'messages/form', message: Message.new, value: '投稿' %>
 
-<div id="messages">
+<div id="messages" class="score-block__message">
   <%= render @messages %>
 </div>
 <%= paginate @messages %>
