--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,10 @@ li {
     margin-top: 10px;
 }
 
+.headerBlock__avatar:hover {
+    opacity: 0.5;
+}
+
 .avatar-img {
     width: 40px;
     height: 40px;
@@ -65,16 +69,24 @@ li {
     padding: 0;
     float: right;
     margin: 10px 50px 0px 0px;
-    font-family: 'Kosugi Maru', sans-serif;
+}
+
+.footer-block {
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin-top: 50px;
 }
 
 body {
     font-family: 'Kosugi Maru', sans-serif;
-}
-
-.backGround__img {
-    // background-image: image-url('golf-bg.jpg');
-    // background-size: cover;
+    color: #555555;
+    background-image: image-url('shiba.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .thmb {
