--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,6 +17,10 @@
     width: 150px;
 }
 
+.topMenu-image__title:hover {
+    opacity: 0.5;
+}
+
 .headerBlock {
     margin: 0px 30px 70px 30px;
 }
@@ -39,7 +43,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    border: 1px solid;
+    border-radius: 10px;
     padding: 10px;
     margin: 20px;
 }
