--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,11 @@
   </head>
 
   <body class="backGround__img">
-    <div class="bgOpacity">
       <%= render 'layouts/header' %>
       <%= render 'layouts/flash.scores' %>
       <%= yield %>
+      <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
       <%#= session.to_hash %>
-    </div>
   </body>
 </html>
