--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,6 +71,10 @@ li {
     margin: 10px 50px 0px 0px;
 }
 
+.avatar-img:hover {
+    opacity: 0.5;
+}
+
 .footer-block {
     width: 100%;
     height: 100px;
@@ -85,7 +89,7 @@ body {
     font-family: 'Kosugi Maru', sans-serif;
     color: #555555;
     background-image: image-url('shiba.jpg');
-    background-repeat: no-repeat;
+    // background-repeat: repeat-x;
     background-size: cover;
 }
 
