--- a/app/views/home/_playing_round.html.erb
+++ b/app/views/home/_playing_round.html.erb
@@ -1,13 +1,17 @@
 <div class="unfinishedList">
-  <%= image_tag('putter-02.svg', class: "newsList__image") %>
+  <div class="image_and_title">
+    <%= image_tag('putter-02.svg', class: "newsList__image") %>
+    <div class="title_group">
+      <h4>スコア入力中のラウンド</h4>
+      <p>クリックすると、スコア入力画面に戻れます。</p>
+    </div>
+  </div>
   <div>
     <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
       <% puts 'あなたは、サインイン中でゲストプレイヤーでもないです。' %>
       <% if @unfinished_score == [] %>
         <p>プレイ中のラウンドはありません。</p>
       <% else %>
-        <h4>スコア入力中のラウンド</h4>
-        <p>クリックすると、スコア入力画面に戻れます。</p>
         <table class=" table table-striped">
           <tr>
             <th>プレイ日</th>
