--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -1,8 +1,77 @@
 // Place all the styles related to the Mypage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.message-block {
+.message-index-block {
     width: 700px;
     margin: 0 auto;
     padding: 20px;
+    .message-index-block__list {
+        height: 60px;
+        margin-bottom: 15px;
+        padding-bottom: 10px;
+        a {
+            font-size: 20px;
+        }
+        p {
+            font-size: 15px;
+        }
+    }
+}
+
+.score-block {
+    width: 700px;
+    margin: 0 auto;
+    padding: 20px;
+    .card-borad_block {
+        display: flex;
+        justify-content: center;
+    }
+    .score-card {
+        width: 320px;
+        margin: 0 auto;
+    }
+    .score-card__table {
+        width: 320px;
+        display: flex;
+    }
+    .leader-board {
+        width: 320px;
+        margin: 0 auto;
+    }
+}
+
+.messageCourse-block {
+    width: 700px;
+    margin: 0 auto;
+    padding: 20px;
+    .messageCourse-message {
+        padding: 10px;
+        // background-color: aliceblue;
+        background-color: rgba(240, 248, 255, 0.7);
+        border-radius: 15px;
+        // opacity: 0.9;
+    }
+    .messageCourse-block__img {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        border-radius: 50%;
+        padding: 0;
+        margin: 0px 10px 0px 0px;
+    }
+    .messageCourse-block__date-content {
+        font-size: 20px;
+        display: block;
+    }
+    .messageCourse-block__date-like {
+        text-align: right;
+        display: block;
+    }
+    .messageCourse-block__group {
+        padding: 10px;
+        // background-color: aliceblue;
+        background-color: rgba(240, 248, 255, 0.7);
+        border-radius: 15px;
+        // opacity: 0.9;
+    }
 }
