--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,10 +1,13 @@
-<div class="message-block">
+<div class="message-index-block">
   <h1>掲示板</h1>
   <p>コースごとの口コミや情報が見られます。</p>
   <p>※メッセージはラウンド画面でしか投稿できません。</p>
   <ul>
     <% @every_course_name.each do|name|%>
-      <li><%= link_to name.golfcoursename, messages_index_course_path(golfcourse_id: name.id) %> </li>
+      <li class="message-index-block__list">
+        <%= link_to name.golfcoursename, messages_index_course_path(golfcourse_id: name.id) %> 
+        <p> <%= name.address %></p>
+      </li>
     <% end %>
   </ul>
 </div>
