メッセージと画像が両方からなら投稿できないバリデーション追加

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -2,6 +2,7 @@
 	<%= f.label :content, "メッセージ" %>
 	<%= f.text_field :content %><br>
   <%= hidden_field_tag :score_id, @score.id %>
+	<%= f.label :image, "画像" %>
 	<%= f.file_field :image %><br>
 	<%= f.submit 'メッセージを送信する' %>
     
