いいねユーザー一覧

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,3 +106,9 @@ body {
 .flex-1 {
     flex: 1;
 }
+
+.commmon__pagenate {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
