--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,5 +1,5 @@
 <%= paginator.render do %>
-  <nav class="user-Serach__pagenate">
+  <nav class="commmon__pagenate">
     <ul class="pagination">
       <%= first_page_tag unless current_page.first? %>
       <%= prev_page_tag unless current_page.first? %>
