--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,15 +1,20 @@
-<h1>投稿詳細ページ</h1>
-<h2><%= @message.user.name %>さんの投稿</h2>
-<p><%= @message.content %></p>
-<h2>いいね件数: <%= @message.likes.count %></h2>
-
-
-<h2>いいねしたユーザー</h2>
-<% @message.liked_users.each do |user| %>
-  <li>
-    <%= user.name %><br>
-    <%= user.introduction %><br>
-  </li>
-<% end %>
-
-<%= link_to "ホームへ戻る", root_path %>
+<div class="likeUser-block">
+  <h2>いいねしたユーザー</h2>
+  <ul class="likeUser__ul">
+    <% if @message.liked_users == [] %>
+      <p>いいねしたユーザーはいません。</p>
+    <% else %>
+      <% @message.liked_users.each do |user| %>
+        <li class="likeUser__list">
+          <% if user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+            <%= image_tag user.avatar.url, class: "avatar-img"%>
+          <% else %>
+            <img src="/assets/ball.svg" class="avatar-img">
+        <% end %>
+        <span class="likeUser__list__span"><%= link_to user.name, user_path(id: user.id), class: "likeUser__list__name" %></span>
+      </li>
+    <% end %>
+  <% end %>
+</ul>
+<%#= paginate @users, theme: 'twitter-bootstrap-4'%>
+</div>
